fable/test/syntax_error/label_empty.f
      program prog
    1
      end
